--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     
                 </div>
                 <div class="project-card" style="background-color: white;">
-                    <img src="./لقطة شاشة 2024-09-02 125421.png" alt="">
+                    <img src="./img.png" alt="">
                 </div>
             </div>
                 <div class="and" style="background-color: white;">
