--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     
                 </div>
-                <div class="project-card" style="background-color: white;">
+                <div class="project-card" style="background-color: white; padding-top: 100px;">
                     <img src="./img.png" alt="">
                 </div>
             </div>
