--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="content-div">
             <div class="grid-div">
                 <div class="element-div">
-                    <img src="https://runwebrun.com/themebau/assets/images/demos/main-home-740-600.jpg" alt="" width="300rem">
+                    <img src="https://lourahassan.github.io/FlexBoxLAb/img1.jpg" alt="" >
                     <p class="grid-text">Main Home</p>
                 </div>
                 <div class="element-div">
